--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
